force-app/main/default/objects/ProductCertification__c/ProductCertification__c.object-meta.xml
<CustomObject>
    <description>Objets stockant les certifications des produits</description>
    <label>Certification produit</label>
    <nameField>
        <displayFormat>PCERT/{0000000}</displayFormat>
        <label>Référence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certifications produit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>