force-app/main/default/objects/ProductCertification__c/fields/certification__c.field-meta.xml
<CustomField>
    <fullName>certification__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Certification</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Referencial__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Certification</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Referencial__c</referenceTo>
    <relationshipLabel>Certifications produit</relationshipLabel>
    <relationshipName>ProductCertification</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>