force-app/main/default/objects/ProductCertification__c/fields/certificationNumber__c.field-meta.xml
<CustomField>
    <fullName>certificationNumber__c</fullName>
    <label>N° de certification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>