force-app/main/default/objects/ProductCertification__c/fields/externalId__c.field-meta.xml
<CustomField>
    <fullName>externalId__c</fullName>
    <externalId>true</externalId>
    <label>Id Externe</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>