force-app/main/default/objects/ProductCertification__c/fields/product__c.field-meta.xml
<CustomField>
    <fullName>product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Champ pour stocké les produits</description>
    <label>Produit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>ProductsCertifications</relationshipName>
    <type>Lookup</type>
</CustomField>