force-app/main/default/objects/ProductCertification__c/validationRules/VR_K3_ProductCertification_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_ProductCertification_Product</fullName>
    <active>true</active>
    <description>Produit obligatoire</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
ISBLANK(product__c)</errorConditionFormula>
    <errorDisplayField>product__c</errorDisplayField>
    <errorMessage>Produit obligatoire !</errorMessage>
</ValidationRule>