force-app/main/default/objects/ProductCertification__c/validationRules/VR_K3_ProductCertification_ValidityDate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_ProductCertification_ValidityDate</fullName>
    <active>true</active>
    <description>La date de fin doit être supérieure ou égale à la date de début de validité !</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
NOT(ISNULL(endDate__c)) &amp;&amp;
endDate__c &lt; startDate__c</errorConditionFormula>
    <errorDisplayField>endDate__c</errorDisplayField>
    <errorMessage>La date de fin doit être supérieure ou égale à la date de début de validité !</errorMessage>
</ValidationRule>