force-app/main/default/objects/ProductCertification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>product__c</columns>
    <columns>startDate__c</columns>
    <columns>endDate__c</columns>
    <columns>certification__c</columns>
    <columns>certificationNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>